--- a/css/global.css
+++ b/css/global.css
@@ -1,3 +1,7 @@
+html{
+    min-height: 100%;
+    position: relative;
+}
 #nav{
     background-color: #ec703b;
 }
@@ -7,9 +11,18 @@
     }
 }
 #Formulario_Login{
-    border: solid 1px #ec703b;
+    border: solid 2px #ec703b;
+    border-radius: 5px;;
 }
 #Login_boton{
     border: solid 1px #ec703b;
     background-color: #ec703b;
+}
+#list-sings{
+    border: solid 2px #ec703b ;
+    border-radius: 5px;
+}
+#sing-information{
+    border: solid 2px #ec703b ;
+    border-radius: 5px;
 }
