--- a/css/global.css
+++ b/css/global.css
@@ -25,7 +25,7 @@ html{
     border: solid 2px #ec703b;
 }
 #div-form-contactenos{
-    border: solid 3px #ec703b ;
+    border: solid 1px #ec703b ;
     border-radius: 5px;
 }
 #c{
@@ -33,9 +33,9 @@ html{
     border-radius: 5px;
     outline: #ec703b;
 }
-#formulario-pqrs input{
+#formulario-pqrs input:not(#boton-enviar){
     border:solid 1px #ec703b;
-    border-radius: 3px;
+    border-radius: 1px;
     outline: #ec703b;
 }
 #formulario-pqrs select{
@@ -45,15 +45,39 @@ html{
 #formulario-pqrs textarea{
     resize: none;
 }
-#boton-enviar{
+#div-boton-enviar{ 
+    border: #ec703b solid 1px;
+    padding: 0%;
     background-color: transparent;
 }
+#boton-enviar{
+    background: transparent;
+    border: none;
+    color: black;
+}
 #boton-enviar:hover{
+    color: aliceblue;
+}
+#div-boton-enviar:hover{
     background-color: #ec703b;
+    color: aliceblue;
+}
+#imagen-de-opciones{
+    padding: 0%;
+    border: 1px solid gray;
+    border-radius: 10px;
+    overflow: auto;
+    width: 100%;
+    height: auto;
+    max-zoom: 5px;
+}
+#info-contactenos div{
+    border: #ec703b solid 1px;
+    border-radius: 3px;
 }
 @media screen and (max-width: 992px){
     #boton_entrar{
-        visibility: hidden;
+        visibility: collapse;
     }
     #contenido-nosotros{
         overflow: scroll;
