--- a/css/global.css
+++ b/css/global.css
@@ -90,11 +90,17 @@ html{
 label{
     cursor:pointer;
 }
+#contenedor_imagen_1_ntc{
+    cursor: default;
+}
+#contenedor_imagen_2_ntc{
+    cursor: default;
+}
 #figure_img_1{
     position: relative;
     overflow: hidden;
     width: 73%;
-    height: 220%;
+    height: 90%;
     border-radius: 6px;
     box-shadow: 0px 2px 4px;
     justify-content: center;
@@ -103,7 +109,7 @@ label{
     position: relative;
     overflow: hidden;
     width: 73%;
-    height: 220%;
+    height: 90%;
     border-radius: 6px;
     box-shadow: 0px 2px 4px;
     justify-content: center;
@@ -122,19 +128,24 @@ label{
     transform: translateY(-50%) translateX(-50%);
     height: 100%;
 }
-/* label[for="imagen_2"] {
+#div_text_area_noticias > textarea{
+    resize: none;
+    
+}
+#enviar_noticia {
     font-size: 14px;
-    font-weight: 600;
+    font-weight: 460;
     color: #fff;
-    background-color: #106BA0;
+    background-color:#ec703b ;
     display: inline-block;
     transition: all .5s;
     cursor: pointer;
-    padding: 15px 40px !important;
+    padding: 10px 30px !important;
     text-transform: uppercase;
     width: fit-content;
+    height: min-content;
     text-align: center;
-    } */
+}
 @media screen and (max-width: 992px){
     #boton_entrar{
         visibility: collapse;
@@ -148,9 +159,6 @@ label{
     #contenido-contactenos{
         overflow-y: scroll;
     }
-    #contenido-sesion{
-        overflow-y: scroll !important;
-    }
 }
 @media screen and (max-height: 630px) {
     #contenido-servicios{
@@ -159,7 +167,25 @@ label{
     #contenido-contactenos{
         overflow-y: scroll;
     }
+}
+@media screen and (max-height: 524px) {
     #contenido-sesion{
-        overflow-y: scroll !important;
+        overflow-y: scroll;
+    }
+}
+@media screen and (min-height: 650px){
+    #figure_img_1{
+        height: 120%;
+    }
+    #figure_img_2{
+        height: 120%;
+    }
+}
+@media screen and (min-height: 800px){
+    #figure_img_1{
+        height: 150%;
+    }
+    #figure_img_2{
+        height: 150%;
     }
 }
